# schnorr-tokens

./: .gitignore  Cargo.toml  README.md  index.js
examples/: delegate.rs  proxy_sign.rs
pkg/: README.md  package.json  schnorr_tokens.d.ts  schnorr_tokens.js  schnorr_tokens_bg.js  schnorr_tokens_bg.wasm  schnorr_tokens_bg.wasm.d.ts
src/: an23_proxy_signature.rs  lib.rs  noir_utils.rs  wasm_bindings.rs
verifier/: Nargo.toml
verifier/src/: main.nr  schnorr_token.nr  types.nr
verifier/src/types/: balance_set.nr
