[package]
name = "schnorr_tokens"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = "0.10.9"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-std = { version = "0.5.0", features = []}
ark-serialize = { version = "0.5.0", default-features = false, features = [ "derive" ] }
ark-grumpkin = { version = "0.5.0", default-features = false }
rand = { version = "0.8.4", default-features = false, features = ["getrandom"]}
blake2 = "0.10.6"
wasm-bindgen = "0.2.100"
